# fcsv

./: .travis.yml  Cargo.toml  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
benchmarks/: benchmark.py  requirements.txt
benchmarks/results/: 2018.03.md  2022-07.md
examples/: reader.py  writer.py
fcsv/: __init__.py
src/: lib.rs
tests/: test_smoke.py
