[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "fcsv"
version = "0.2.0"
description = "Fast CSV library"
authors = [
    {name = "Hideo Hattori", email = "hhatto.jp@gmail.com"}
]
requires-python = ">=3.8"

[tool.maturin]
features = ["pyo3/extension-module"]
python-packages = ["fcsv"]
